--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,64 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 Authlib==1.6.0
+beautifulsoup4==4.13.4
 certifi==2025.6.15
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.5
+curl_cffi==0.11.4
+dotenv==0.9.9
 ecdsa==0.19.1
 fastapi==0.115.14
+frozendict==2.4.6
+frozenlist==1.7.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-psycopg2==2.9.10
+joblib==1.5.1
+jose==1.0.0
+jwt==1.4.0
+MarkupSafe==3.0.2
+metalpriceapi==1.1.2
+mpmath==1.3.0
+multidict==6.6.3
+multitasking==0.0.11
+numpy==2.3.1
+packaging==24.2
+pandas==2.3.0
+peewee==3.18.1
+pillow==11.3.0
+platformdirs==4.3.8
+propcache==0.3.2
+protobuf==6.31.1
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
 starlette==0.46.2
+threadpoolctl==3.6.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
 uvicorn==0.35.0
+websockets==15.0.1
+yarl==1.20.1
+yfinance==0.2.64
