--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,14 @@ certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+contourpy==1.3.2
 cryptography==45.0.5
 curl_cffi==0.11.4
+cycler==0.12.1
 dotenv==0.9.9
 ecdsa==0.19.1
 fastapi==0.115.14
+fonttools==4.58.5
 frozendict==2.4.6
 frozenlist==1.7.0
 h11==0.16.0
@@ -24,6 +27,7 @@ idna==3.10
 joblib==1.5.1
 jose==1.0.0
 jwt==1.4.0
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
 metalpriceapi==1.1.2
 mpmath==1.3.0
@@ -41,6 +45,7 @@ pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
@@ -48,6 +53,7 @@ pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.4
 rsa==4.9.1
+scipy==1.16.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
@@ -62,3 +68,9 @@ uvicorn==0.35.0
 websockets==15.0.1
 yarl==1.20.1
 yfinance==0.2.64
+lightgbm>=3.3.0
+pandas>=1.3.0
+scikit-learn>=0.24.0
+joblib>=1.0.0
+python-multipart
+pyarrow
