--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
-contourpy==1.3.2
 cryptography==45.0.5
 curl_cffi==0.11.4
 cycler==0.12.1
@@ -24,18 +23,15 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-joblib==1.5.1
 jose==1.0.0
 jwt==1.4.0
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 metalpriceapi==1.1.2
-mpmath==1.3.0
 multidict==6.6.3
 multitasking==0.0.11
-numpy==2.3.1
+openai>=1.30.1
 packaging==24.2
-pandas==2.3.0
 peewee==3.18.1
 pillow==11.3.0
 platformdirs==4.3.8
@@ -49,17 +45,16 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.4
 rsa==4.9.1
-scipy==1.16.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.41
 starlette==0.46.2
-threadpoolctl==3.6.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
@@ -68,9 +63,5 @@ uvicorn==0.35.0
 websockets==15.0.1
 yarl==1.20.1
 yfinance==0.2.64
-lightgbm>=3.3.0
-pandas>=1.3.0
-scikit-learn>=0.24.0
-joblib>=1.0.0
-python-multipart
-pyarrow
+psycopg2-binary>=2.9.0
+sqlalchemy>=1.4.0
